samples/_failures_safe/1761182237_c85408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7118296.c: In function ‘main’:
./samples/SAFE/__tmp_e7118296.c:174:9: error: expected expression at end of input
  174 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_e7118296.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7118296.c:174:9: error: expected declaration or statement at end of input
